force-app/main/default/objects/Opportunity__c/fields/User1__c.field-meta.xml
<CustomField>
    <fullName>User1__c</fullName>
    <label>User1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>