force-app/main/default/objects/Opportunity__c/fields/User2__c.field-meta.xml
<CustomField>
    <fullName>User2__c</fullName>
    <label>User2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>